--- a/Design/EN.600.437.FP.FA14.DESIGN.tex
+++ b/Design/EN.600.437.FP.FA14.DESIGN.tex
@@ -33,24 +33,24 @@ A distributed chat server system that is fault tolerant through the use of a lam
 }
 \maketitle
 \section{Overall Approach}
-\IEEEPARstart{T}{his} chat service will be composed of 5 servers each hosting their own set of clients. Servers will communicate with each other and their clients through spread utilizing multicasting with agreed ordering. A client will pick some server to which to connect depending on server availaiblity. Then the client selects a username which is a unique identifier (meaning other client process running with the same name will be treated as one person). Finally a client joins the the desired chat room to chat with other clients that joined that chatroom.
+\IEEEPARstart{T}{his} chat service is composed of 5 servers each hosting their own set of clients. Servers communicate with each other and their clients through spread utilizing multicasting with agreed ordering. A client connects to a  server in order to begin utilizing the chat functions. Then the client selects a username which is a unique identifier (meaning other client process running with the same name will be treated as one person). Finally a client joins the the desired chat room to chat with other clients that joined that chatroom.
 
 All operation ordering is done on the server side. The client simply makes requests for its desired information and the server sends it what it needs. Therefore, the client will not see that its request has been fulfilled until the server has completely processed it. There is no computation done on the client side. Rather, the only thing the client must do is maintain the linked list of messages which exist in the chat room of which it is a member.
 
-Now in order to maintaining global consistency across servers, we incorporate a lamport timestamp into the requests made by a client. By using a lamport timestamp which consists of a process ID and a process sequence number, we can maintain total ordering across all servers that are connected. Furthermore, the lamport timestamp makes it possible to retain consistent and agreed ordering across partitions and merges.
+In order to maintain global consistency across servers, we create a lamport timestamp for each request made by a client on the server they are connected to. By using a lamport timestamp which consists of a process ID and a process sequence number, we can maintain total ordering across all servers that are connected. Furthermore, the lamport timestamp makes it possible to retain consistent and agreed ordering across partitions and merges.
 
 We also use a matrix to maintain knowledge of the most recent messages each server has from every server. Therefore, from the perspective of some given server, it knows what messages other servers are missing from not only itself but also from all other servers.
 
 By using a lamport timestamp along with this matrix of the highest lamport timestamps received, we can acheive an eventually consistent state across all of the servers.
 
-Next, in order to acheive resiliency in the face of crashes, we simply incorporate a file writing system such that after every update received by some server, whether that is from another server or a client, is written to a file (disk). Therefore, when the crashed process is rejuvinated, it can open the written file and catch itself back up to its state prior to the crash..
+Next, in order to acheive resiliency in the face of crashes, we simply incorporate a file writing system such that after every update received by some server, whether that is from another server or a client, is written to a file (disk). Therefore, when the crashed process is rejuvinated, it opens the written file and and begins processing from its state prior to the crash, requesting any updates required through the matrix it sends.
 
 \section{Design}
 \subsection{Assumptions}
 Below are our assumptions.
 \begin{itemize}
 \item A user is uniquely identified by their username.
-\item 
+\item Users cannot communicate until they connect to a server.
 \end{itemize}
 \subsection{Group Architecture}
 Four kinds of groups are created in order to properly manage this chat service:
@@ -61,14 +61,13 @@ Four kinds of groups are created in order to properly manage this chat service:
 \item Five groups per existing chat room, one for each server.
 \end{itemize}
 
-The group for all of the servers is a group that each server joins. The main use is for communication between the servers. By being a part of the group, servers can receive updates from other servers' clients through those servers. Furthermore, when a partition occurs (some set of servers lose communication with the other set of servers), then the servers know which servers it can still communicate with because those servers that remained in the same partition will see that they are members of the same group.
+The group for all of the servers is a group that each server joins. The main use is for communication between the servers. By being a part of the group, servers can receive updates from other servers' clients through those servers. Furthermore, when a partition occurs (some set of servers lose communication with the other set of servers), then the servers know which servers it can still communicate with because those servers that remained in the same partition will see that they are members of the same group.  This information is kept on each server, and is also used for when the client requests to see which servers are available.
 
-The groups per server are used for communication from client to server. The server alone joins the group and a client will be able to send requests through this group to the server to which the client is connected.
+The groups per server are used for communication from client to server. The server alone joins the group and a client will be able to send requests through this group to the server to which the client is connected.  The messages passed through this group are text messages, likes, unlikes, display servers online, and request to join a group.
 
-The groups per server and a server's clients are used for determining whether the server is available or not. A client joins this group when it wants to connect to the corresponding server. If the server is also in that group, then the client knows that the server is availablei. If a server were to disconnect, then clients would be notified that the server they were connected to became unavailable through a membership change notification through the group.
+The groups per server and a server's clients are used for determining whether the server is available or not. A client joins this group when it wants to connect to the corresponding server. If the server is also in that group, then the client knows that the server is available. If a server were to disconnect, then clients would be notified that the server they were connected to became unavailable through a membership change notification through the group.  At this point the clients are notified that their server is no longer available.  Similarly, if a client connects to the server group, and the server is not in the group, the client is immediately notified that the server the user requested is not available.
 
-The five groups per existing chat room, one per each server, represents the membership in a given chat room on a specific server. Therefore, when a client decides to join some chat room, it joins this chat room group associated to the client's server. From this, it becomes evident that it becomes the servers' job to maintain consistent communication within chat rooms across servers. The servers are also a part of these chat rooms so that they can determine which clients are in what groups..
-
+The five groups per existing chat room, one per each server, represents the membership in a given chat room on a specific server. Therefore, when a client decides to join some chat room, it joins this chat room group associated to the client's server. From this, it becomes evident that it becomes the servers' job to maintain consistent communication within chat rooms across servers. The servers are also a part of these chat rooms in order to allow them to determine which clients are in what groups.  This information is utilized to see which usernames belong to a chatroom.  Therefore, if a client is suddenly disconnected, the server is notified that the client is gone, and therefore can let other clients know that the user has left the chat room they were in.
 
 \subsection{Message Packet}
 % Yair doesn't want code in the design so I guess we just put a discription of the message packet.
