design doc updates

--- a/Design/EN.600.437.FP.FA14.DESIGN.tex
+++ b/Design/EN.600.437.FP.FA14.DESIGN.tex
@@ -175,17 +175,18 @@ The incentive behind having this data structure is that a client process will on
 \subsection{Client State Machine}
 
 \subsection{Client Data Structures}
-The client only has one data structure. A linked list of the messages that have occured in the chat room to which a client is a member. These messages are sorted in lamport timestamp order. Each of the nodes has the number of likes associated with that message as a part of the message data. This makes it very easy for the client process to output the contents of its chat room. One simply iterates through the nodes and prints out the username of the message's author, the text, and the number of likes.
+The client only has one data structure. A linked list of the messages that have occured in the chat room to which a client is a member. These messages are sorted in lamport timestamp order. Each of the nodes has the number of likes associated with that message as a part of the message data. This makes it very easy for the client process to output the contents of its chat room. One simply iterates through the nodes and prints out the username of the message's author, the text, and the number of likes.  The link list is destroyed each time a user leaves the chatroom, and a new one is created when the user joins a new chatroom.
 
 \subsection{Algorithm}
 
 \subsubsection{Regular Case}
 
-The algorithm in the regular case:
-\begin{itemize}
-\item 
-\end{itemize}
+In the regular case, each server starts and has no log file.  As each server comes online, they share with the server group their matrix.  This is a matrix of lamport timestamps of the latest update from each server.  Therefore a server will have the latest timestamps from itself, along with the latest timestamps of messages it has received from other servers.  This is key, because if two servers join after a partition, one may know about messages that were sent from a third server, and thus can send the third servers messages to ensure the latest knowledge is shared within their partition.  \\
+Initially these timestamps are zero.  As clients join servers, they create messages, and the servers assign each message an LTS, saves it to its log, and sends that message to the chatroom on its server, and also sends the message to the other servers so they can update their respective chatrooms.  If a user "likes" a message, a chat message is created with the LTS of the message they like, and that is sent to the server.  The server then updates its data structure by finding the message, and either adding a likes struct to that message for that user, or finding one that exists and checks to see if the LTS is greater or not.  If it is greater it updates the LTS, and changes the like to one.  The same occurs for an unlike, however it just updates the value to 0.  Although the server maintains the linked list of names that like a message, when the server updates the clients, it simply updates that message with the number of users that like the message.  This makes it simple for the clients to display the number of likes without maintaining a user list for each message.\\
+When a server crashes and is restarted, it begins by reading from the log file.  As it reads, it updates its matrix of LTS timestamps.  When complete, it joins the server group, which triggers all servers to send their matrix.  It will immediately receive updates for all the message it does not have from the server that has the highest LTS of messages in the matrix for each server.  It will process these updates, and if any clients connect during this time, they will be given the updates as well by the group they are connected to for their chatroom.
 
 \subsubsection{Reconciliation Case}
-
+Each time a membership change operation occurs in the server group, each server begins a reconciliation process.  If a server leaves the group, each server begins removing all users from the chatroom data structure for that server.  Then an update is sent to the client of only those affected chatrooms with the new membership list of the rooms.  Therefore every user will know that the users that were on the server that went down are no longer reachable.  \\When a server joins the server group, this triggers each server to send their matrix of latest LTS timestamps for each message they now about.  Since the membership change contains how many servers are in the group, each server will wait for the correct number of matrices from each other server before sending any updates.  Once they are all received, each server computes the minimum and maximum LTS for each server.  If the server finds that their server ID contains the maximum, it will send all messages after the minimum LTS (regardless if they are the owner of the messages).  Servers will disregard any message it receives if it has a lower LTS than what is received.  Therefore, each server will now have the latest messages after the join operation.  \\
+As each of these update message arrive at the server, they are placed in the server array/linked list structure in order, and in the chatroom linked list by LTS order.  In addition, each packet is also sent to the chatroom group on that server that it belongs to.  This allows each client to receive the message, and place it in its data structure in LTS order.  Once this occurs, it will refresh the screen to display that message and all after it, to inform the user of the changed messages and/or likes.\\
+In the case that a message is liked, but the message that was liked was not yet received by the server, the server will create a message that is marked as not received, and the like is attached to that message.  This placeholder message will not be displayed until it is marked received.  Once this occurs, the like will be on that message.  This creates eventual consistency, since likes refer to messages that potentially may not be received due to partitioning.
 \end{document}
