Fixed strcpy problem

--- a/Design/EN.600.437.FP.FA14.DESIGN.tex
+++ b/Design/EN.600.437.FP.FA14.DESIGN.tex
@@ -51,6 +51,7 @@ Below are our assumptions.
 \begin{itemize}
 \item A user is uniquely identified by their username.
 \item Users cannot communicate until they connect to a server.
+\item Chatroom names are only comprised of alphabetic letters.
 \end{itemize}
 \subsection{Group Architecture}
 Four kinds of groups are created in order to properly manage this chat service:
